--- a/src/css/simplemde.css
+++ b/src/css/simplemde.css
@@ -384,10 +384,5 @@
 }
 
 .cm-data-url {
-  background-color: grey;
-  width: 200px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: block;
+  display: none;
 }
